viet service cho food,  config cau hinh de su dung cloudinary tao entity Xóa db để run lại chương trình không lỗi do sửa tên các cột trong db

--- a/backend/appfood/pom.xml
+++ b/backend/appfood/pom.xml
@@ -66,6 +66,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.28.1</version>
+		</dependency>
+
+		<!-- Thư viện hỗ trợ upload file -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
