--- a/backend/appfood/src/main/resources/application.yaml
+++ b/backend/appfood/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: nd2004lk13@gmail.com
-    password: vkal selx yzgn mldf
+    password: yxqb kgdi zrpp mpmn
     default-encoding: UTF-8
     properties:
       mail.smtp.auth: true
