display list food by category_v1

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.ListFoodActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.user.VerifyOtpActivity"
             android:exported="false" />
         <activity
