--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ retrofit = "2.11.0"
 converterGson = "2.11.0"
 gson = "2.12.1"
 fragment = "1.8.6"
+navigationFragment = "2.6.0"
+navigationUi = "2.6.0"
 
 [libraries]
 pinview = { module = "io.github.chaosleung:pinview", version = "1.4.4" }
@@ -25,6 +27,8 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
