--- a/backend/appfood/src/main/resources/application.yaml
+++ b/backend/appfood/src/main/resources/application.yaml
@@ -14,6 +14,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   mail:
     host: smtp.gmail.com
     port: 587
