done reset password

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.user.VerifyOtpResetPassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.ResetPassActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.FoodDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.AppFoodOrder" />
@@ -37,6 +43,7 @@
             android:theme="@style/Theme.AppFoodOrder.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
