--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.VNPayActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activity.OrderActivity"
@@ -44,12 +44,11 @@
             android:name=".ui.activity.user.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.activity.intro.OnBoardingActivity"
             android:exported="true"
             android:theme="@style/Theme.AppFoodOrder.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
